--- a/15_Company_Info/assets/css/style.css
+++ b/15_Company_Info/assets/css/style.css
@@ -31,7 +31,7 @@
 }
 
 .vc_custom_1563985999009 {
-    background-image: url(wp-content/uploads/2019/07/b3fd5.png?id=1018) !important;
+    background-image: url(/assets/images/b3fd5.png) !important;
     background-position: center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
