--- a/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_contact.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Shared/_partial/_contact.cshtml
@@ -6,38 +6,40 @@
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
     }
 }
-<section class="contact-area section-padding section-relative" id="contact" style="margin-bottom: -60px;">
-    <div class="section-bg"></div>
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                <div class="page-title">
-                    <h2 style="border:none;">Đăng ký và liên hệ</h2>
-                    <p>Hãy để lại thông tin liên hệ của bạn để nhận thông tin miễn phí từ chúng tôi !</p>
-                    <p>Hotline :  <a href="tel:@commonInfo.HotLine"></a> @(string.IsNullOrEmpty(commonInfo.OtherPhone)?(" - " +commonInfo.OtherPhone):"") </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                <input type="text" class="form-control" id="name" placeholder="Tên *" required="">
-                <input class="form-control" id="email" placeholder="Email">
-                <input type="text" class="form-control" id="phone" placeholder="Số điện thoại *" required="">
-                <input type="text" class="form-control" id="address" placeholder="Địa chỉ *" required="">
-                <textarea class="form-control" rows="6" id="message" placeholder="Để lại lời nhắn" required=""></textarea>
-                <div class="form-selector mbt15">
-                    <div id="g-recaptcha"></div>
-                </div>
-                <div class="form-group">
-                    <div class="text-center mb-25 mt-24{">
-                        <button class="battn" id="btn-send-contact">Gửi thông tin</button>
+        <section class="contact-area section-padding section-relative" id="contact" style="margin-bottom: -60px;">
+            <div class="section-bg"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+                        <div class="page-title">
+                            <h2 style="border:none;">Đăng ký và liên hệ</h2>
+                            <p>Hãy để lại thông tin liên hệ của bạn để nhận thông tin miễn phí từ chúng tôi !</p>
+                            <p>Hotline :  <a href="tel:@commonInfo.HotLine" style="color:white">@commonInfo.HotLine</a> @(!string.IsNullOrEmpty(commonInfo.OtherPhone) ? (" - " + commonInfo.OtherPhone) : "") </p>
+                        </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+                        <input type="text" class="form-control" id="name" placeholder="Tên *" required="">
+                        <input class="form-control" id="email" placeholder="Email">
+                        <input type="text" class="form-control" id="phone" placeholder="Số điện thoại *" required="">
+                        <input type="text" class="form-control" id="address" placeholder="Địa chỉ *" required="">
+                        <textarea class="form-control" rows="6" id="message" placeholder="Để lại lời nhắn" required=""></textarea>
+                        <div class="form-selector mbt15">
+                            <div id="g-recaptcha"></div>
+                        </div>
+                        <div class="form-group">
+                            <div class="text-center mb-25 mt-24{">
+                                <button class="battn" id="btn-send-contact">Gửi thông tin</button>
+                            </div>
+                        </div>
 
 
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
     </div>
-</section>
 <link href="/assets/css/style-contact.css" rel="stylesheet" />
-<script src="/assets/js/contact.js"></script>
+
