--- a/15_Company_Info/beehome.vn/wp-content/themes/archi-3.0.1/fonts/font-awesome/css/font-awesome2513.css
+++ b/15_Company_Info/beehome.vn/wp-content/themes/archi-3.0.1/fonts/font-awesome/css/font-awesome2513.css
@@ -4,12 +4,13 @@
  */
 /* FONT PATH
  * -------------------------- */
+
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont3e6e.eot?v=4.7.0');
-  src: url('../fonts/fontawesome-webfontd41d.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont3e6e.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont3e6e.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont3e6e.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont3e6e.svg?v=4.7.0#fontawesomeregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'FontAwesome';
+    src: url('/wp-content/themes/archi-3.0.1/fonts/font-awesome/fonts/fontawesome-webfont3e6e.eot?v=4.7.0');
+    src: url('/wp-content/themes/archi-3.0.1/fonts/font-awesome/fonts/fontawesome-webfontd41d.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('/wp-content/themes/archi-3.0.1/fonts/font-awesome/fonts/fontawesome-webfont3e6e.woff2?v=4.7.0') format('woff2'), url('/wp-content/themes/archi-3.0.1/fonts/font-awesome/fonts/fontawesome-webfont3e6e.woff?v=4.7.0') format('woff'), url('/wp-content/themes/archi-3.0.1/fonts/font-awesome/fonts/fontawesome-webfont3e6e.ttf?v=4.7.0') format('truetype'), url('/wp-content/themes/archi-3.0.1/fonts/font-awesome/fonts/fontawesome-webfont3e6e.svg?v=4.7.0#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 .fa {
   display: inline-block;
