--- a/15_Company_Info/Views/Home/Index.cshtml
+++ b/15_Company_Info/Views/Home/Index.cshtml
@@ -11,14 +11,14 @@
 @section health{
     <meta name="description" content="@commonInfo.Desc" />
     <meta name="keywords" content="@commonInfo.Desc" />
-    <style id='js_composer_front-inline-css' type='text/css'>
+    <style  type='text/css'>
+        .vc_custom_1503992894148{
+            display:none;
+        }
     </style>
 }
 <div id="wrapper">
-
-
     @Html.Partial("_partial/_HomeSlide")
-
     <section class="wpb_row vc_row-fluid mt-sm-0 text-light wpb_animate_when_almost_visible wpb_fadeInDown fadeInDown vc_custom_1563035993904 vc_row-has-fill side-bg">
         <div class="image-container col-md-6 col-md-offset-6 pull-right right0"><div class="background-image" style="background-image: url(wp-content/uploads/2019/07/v2-min.jpg);"></div></div><div class="container">
             <div class="row">
