--- a/15_Company_Info/Views/Shared/_partial/_contact.cshtml
+++ b/15_Company_Info/Views/Shared/_partial/_contact.cshtml
@@ -13,9 +13,9 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="page-title">
-                        <h2 style="border:none;">Đăng ký và liên hệ</h2>
-                        <p>Hãy để lại thông tin liên hệ của bạn để nhận thông tin miễn phí từ chúng tôi !</p>
-                        <p>Hotline :  <a href="tel:@commonInfo.HotLine" style="color:white">@commonInfo.HotLine</a> @(!string.IsNullOrEmpty(commonInfo.OtherPhone) ? (" - " + commonInfo.OtherPhone) : "") </p>
+                        <h2 style="border:none;">Đăng ký tư vấn và liên hệ</h2>
+                        <p style="font-size:18px;">Hãy để lại thông tin liên hệ của bạn để nhận thông tin miễn phí từ chúng tôi !</pstyle="font-size:20px;">
+                        <p style="font-size:20px;">Hotline :  <a href="tel:@commonInfo.HotLine" style="color:white">@commonInfo.HotLine</a> @(!string.IsNullOrEmpty(commonInfo.OtherPhone) ? (" - " + commonInfo.OtherPhone) : "") </p>
                     </div>
                 </div>
             </div>
