--- a/15_Company_Info/beehome.vn/wp-content/themes/archi-3.0.1/framework/color2513.css
+++ b/15_Company_Info/beehome.vn/wp-content/themes/archi-3.0.1/framework/color2513.css
@@ -49,7 +49,9 @@
 		header.header-bg{
             background: ;
         }
-        #mainmenu li a, #mainmenu li li a{color: #ffffff;}
+        #mainmenu li a, #mainmenu li li a {
+            color: #222327;
+        }
 	}
 
 	/* Content Colors */	
