--- a/15_Company_Info/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/15_Company_Info/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -1,129 +1,25 @@
 ﻿
 
-
-<div class="column col-xs-12 col-sm-3" id="left_column">
-
-    <!-- block category -->
-    <div class="block left-module bw">
-        <h2 class="page-heading">
-            <span class="page-heading-title">Danh mục tin </span>
-        </h2>
-        
-        <div class="block_content">
-            <!-- layered -->
+    <div class="column col-xs-12 col-sm-3  col-md-3" id="left_column">
+        <ul id="services-list">
             @if (ViewData["commonInfo"] != null)
             {
                 AnperoFrontend.WebService.Webconfig commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
-                <div class="layered layered-category">
-                    <div class="layered-content">
-                        <ul class="tree-menu">
-                            @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                {
+                    foreach (var item in commonInfo.ProductCategoryList)
+                    {
+                        <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">@item.Name</a></li>
+                        if (item.ChildCategory != null && item.ChildCategory.Length > 0)
+                        {
+                            foreach (var subItem in item.ChildCategory)
                             {
-                                for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
-                                {
-                                    if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
-                                    {
-                                        for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
-                                        {
-                                            <li><span></span><a href="@Anpero.StringHelpper.GetCategoryLink(commonInfo.ProductCategoryList[i].ChildCategory[j].Name,commonInfo.ProductCategoryList[i].ChildCategory[j].Id)">@commonInfo.ProductCategoryList[i].ChildCategory[j].Name</a></li>
-                                        }
-
-                                    }
-                                }
+                                <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(subItem.Name,subItem.Id)">@subItem.Name</a></li>
                             }
-
-
-                        </ul>
-                    </div>
-                </div>
-            <!-- ./layered -->
+                        }
+                    }
+                }
             }
-        </div>
-
+        </ul>
     </div>
-    @if (ViewData["BestsaleProduct"] != null)
-    {
-        AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
-        if (bestSaleList != null && bestSaleList.ResultCount > 3 && bestSaleList.Item.Length > 0)
-        {
-            <div class="block left-module bw">
-                <p class="title_block">Nổi bật</p>
-                <div class="block_content">
-                    <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
-
-                        <ul class="products-block best-sell">
-                            @for (int i = 0; i < 3; i++)
-                            {
-                                <li>
-                                    <div class="products-block-left">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                            <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                        </a>
-                                    </div>
-                                    <div class="products-block-right">
-                                        <p class="product-name">
-                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                        </p>
-                                    </div>
-                                </li>
-                            }
-                        </ul>
-                        <ul class="products-block best-sell">
-                            @for (int i = 3; i < bestSaleList.Item.Length; i++)
-                            {
-                                <li>
-                                    <div class="products-block-left">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                            <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                        </a>
-                                    </div>
-                                    <div class="products-block-right">
-                                        <p class="product-name">
-                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)" title="@bestSaleList.Item[i].PrName">@bestSaleList.Item[i].PrName</a>
-                                        </p>
-                                    </div>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        }
-        else if (bestSaleList != null && bestSaleList.ResultCount <= 3)
-        {
-            <div class="block left-module bw">
-                <p class="title_block">Nổi bật</p>
-                <div class="block_content">
-                    <div class="owl-best-sell">
-                        <ul class="products-block best-sell">
-                            @for (int i = 0; i < bestSaleList.Item.Length; i++)
-                            {
-                                <li>
-                                    <div class="products-block-left">
-                                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">
-                                            <img src="@bestSaleList.Item[i].Images" alt="@bestSaleList.Item[i].PrName">
-                                        </a>
-                                    </div>
-                                    <div class="products-block-right">
-                                        <p class="product-name">
-                                            <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@bestSaleList.Item[i].PrName</a>
-                                        </p>
-                                        <p class="product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(bestSaleList.Item[i].Price.ToString())</p>
-                                        <p class="product-star">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                        </p>
-                                    </div>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        }
-    }
-</div>
 
